diagnostics/tests/snapshots/utf8_boundary.snap
error[TEST_UTF8]: inside utf8 char
 --> utf8.js:1:1
  |
1 | écho
  | ^ inside utf8 char
